	13005 Angelic Wing Dagger:	NEED INFO.
	1308 Golden Axe:		NEED INFO.
	13160, 13161 Destroyer:	Can break target's armor when fired at close range.
	-----
	4296 Cramp Card:	Temp Plug: 10z per mob-level on a 3% chance.
	7458 Fortune Horn:	It's a custom name ^^;
	12017 Speed Decreasing Potion: A potion which decreases the moving speed of a character for a duration.
	-----

=========================
08/07
	* Slightly increased drop rate of some low-level guns [Playtester]
	- also lowered drop rate of Armor Charm to 0.01% again
08/06
	* Fixed selling price of Sharp Leaf [Playtester]
08/05
	* Added temporary size fixes for GS/NJ weapons [Playtester]
	* Raised NJ/GS item MVP drop rates a little [Playtester]
08/04
	* Fixed Boots not equipable by Gunslingers [Playtester]
	* Added the remaining official item drop bonus rates [Playtester]
	- note that some bugs might have appeared, please test!
	* Added some official item drop bonus rates [Playtester]
	- also replaced IG_Jellopy with IG_Resist
	* reverted 13202,Shell_of_Blood back [Lupus]
	* Fixed 13202,Shell_of_Blood type to 4 = SHELL for shotgun (not a bullet) [Lupus]
08/03
	* Hydro is no longer an MVP [Playtester]
	* Changed the inf2 value of SA_DISPEL so it can be casted on party/guild
	  mates, but not yourself. [Skotlex]
	* Updated some monsters [Playtester]
	- Gig and Deleter are now Fire 2 element
	- reduced attack power of Skeggiolds
	* Finally updated stats of the monsters that got their exp updated a month ago [Playtester]
	* Fixed some items I added yesterday [Playtester]
08/02
	* Added a dummy blind duration of 10 secs to FullBuster. [Skotlex]
	* Updated the mob skills so that the marine sphere casts self-destruction
	  with 3 second cast after it starts walking. [Skotlex]
	* Updated Create Arrow to X.4 [Playtester]
	* Gold Lux now makes you autocast Flip Coin on attack [Playtester]
	- also Gunslinger can use Berserk Potion now
	* Changed Scream and Hammerfall's stun duration to 5 seconds. [Skotlex]